Convert collector to toList